force-app/main/default/objects/Work_Centers__c/Work_Centers__c.object-meta.xml
<CustomObject>
    <label>Work Center</label>
    <nameField>
        <label>Work Center</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Centers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>