force-app/main/default/objects/Work_Centers__c/fields/Backflush__c.field-meta.xml
<CustomField>
    <fullName>Backflush__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Backflush</label>
    <type>Checkbox</type>
</CustomField>