force-app/main/default/objects/Work_Centers__c/fields/Capacity__c.field-meta.xml
<CustomField>
    <fullName>Capacity__c</fullName>
    <formula>( Operating_Time__c -  Setup_Time__c -  Teardown_Time__c -  Queue_Time__c  ) * Target_Efficiency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expressed in Minutes</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>