force-app/main/default/objects/Work_Centers__c/fields/Headcount__c.field-meta.xml
<CustomField>
    <fullName>Headcount__c</fullName>
    <label>Headcount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>