force-app/main/default/objects/Work_Centers__c/fields/Lunch_Time__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Time__c</fullName>
    <inlineHelpText>Expressed in Minutes</inlineHelpText>
    <label>Lunch Time</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>