force-app/main/default/objects/Work_Centers__c/fields/Machine_Cost__c.field-meta.xml
<CustomField>
    <fullName>Machine_Cost__c</fullName>
    <formula>(  Operating_Time__c  / 60 ) * ( Machine_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>