force-app/main/default/objects/Work_Centers__c/fields/Machine_Rate__c.field-meta.xml
<CustomField>
    <fullName>Machine_Rate__c</fullName>
    <label>Machine Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>