force-app/main/default/objects/Work_Centers__c/fields/Operating_Time__c.field-meta.xml
<CustomField>
    <fullName>Operating_Time__c</fullName>
    <formula>((Hour( End_Time__c ) - Hour( Start_Time__c )) + (( Minute( End_Time__c ) - Minute( Start_Time__c )) / 60)) * 60 
- Break_Time__c -  Lunch_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Expressed in Minutes</inlineHelpText>
    <label>Operating Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>