force-app/main/default/objects/Work_Centers__c/fields/Overhead_Load__c.field-meta.xml
<CustomField>
    <fullName>Overhead_Load__c</fullName>
    <label>Overhead Load</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>