force-app/main/default/objects/Work_Centers__c/fields/Setup_Cost__c.field-meta.xml
<CustomField>
    <fullName>Setup_Cost__c</fullName>
    <formula>( Setup_Time__c / 60 * Setup_Rate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setup Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>