force-app/main/default/objects/Work_Centers__c/fields/Setup_Rate__c.field-meta.xml
<CustomField>
    <fullName>Setup_Rate__c</fullName>
    <label>Setup Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>