force-app/main/default/objects/Work_Centers__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Work Centers</relationshipLabel>
    <relationshipName>Work_Centers</relationshipName>
    <type>Lookup</type>
</CustomField>