force-app/main/default/objects/Work_Centers__c/fields/Target_Efficiency__c.field-meta.xml
<CustomField>
    <fullName>Target_Efficiency__c</fullName>
    <label>Target Efficiency</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>