force-app/main/default/objects/Work_Centers__c/fields/Teardown_Cost__c.field-meta.xml
<CustomField>
    <fullName>Teardown_Cost__c</fullName>
    <formula>(Teardown_Time__c / 60) * Teardown_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Teardown Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>