force-app/main/default/objects/Work_Centers__c/fields/Teardown_Rate__c.field-meta.xml
<CustomField>
    <fullName>Teardown_Rate__c</fullName>
    <label>Teardown Rate</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>