force-app/main/default/objects/Work_Centers__c/fields/Work_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Hours__c</fullName>
    <label>Work Hours</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>