force-app/main/default/objects/Work_Centers__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Headcount__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Break_Time__c</columns>
    <columns>Work_Hours__c</columns>
    <columns>Operating_Time__c</columns>
    <columns>Target_Efficiency__c</columns>
    <columns>Capacity__c</columns>
    <columns>Setup_Time__c</columns>
    <columns>Teardown_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>