force-app/main/default/objects/Work_Centers__c/listViews/Conception_Nurseries.listView-meta.xml
<ListView>
    <fullName>Conception_Nurseries</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Headcount__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Break_Time__c</columns>
    <columns>Work_Hours__c</columns>
    <columns>Operating_Time__c</columns>
    <columns>Target_Efficiency__c</columns>
    <columns>Capacity__c</columns>
    <columns>Setup_Time__c</columns>
    <columns>Teardown_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Media</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>startsWith</operation>
        <value>Snip</value>
    </filters>
    <label>Conception Nurseries</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>